<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <import type="android.view.View"/>
    <variable
        name="viewModel"
        type="com.example.test.screens.starcharacterlist.mvvm.viewmodels.StarCharacterListViewModel"
        />
  </data>

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background"
      >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="@{viewModel.showLoader? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/progressBarStyle"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp55"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:listitem="@layout/list_item_character"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/star_character_list"
        android:textColor="@color/white"
        android:textSize="@dimen/font18"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="@{(!viewModel.connectedToInternet || !viewModel.success)? View.VISIBLE : View.GONE}"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:text="@string/no_internet"
          android:textSize="@dimen/font16"
          android:visibility="@{viewModel.connectedToInternet? View.GONE : View.VISIBLE}"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/dp20"
          android:gravity="center"
          android:textColor="@color/white"
          android:text="@string/generic_error_msg"
          android:textSize="@dimen/font16"
          android:visibility="@{viewModel.success? View.GONE : View.VISIBLE}"
          />

      <Button
          android:id="@+id/btnRetry"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp15"
          android:text="@string/retry"
          android:onClick="@{(v) -> viewModel.fetchData()}"
          />

    </LinearLayout>

  </android.support.constraint.ConstraintLayout>
</layout>